FIxed flicker issue in banner

--- a/app/components/HeroBanner.module.css
+++ b/app/components/HeroBanner.module.css
@@ -20,14 +20,14 @@
 .curtainTop,
 .curtainBottom {
   width: 100%;
-  height: 50%;
+  height: 100%;
   background: black;
   animation: curtainOpen 2s ease forwards;
 }
 
 @keyframes curtainOpen {
   0% {
-    height: 50%;
+    height: 100%;
   }
   100% {
     height: 0;
